fix: landing page padding alignment

--- a/pages/LandingPage.module.css
+++ b/pages/LandingPage.module.css
@@ -1,4 +1,4 @@
 .UserGuide-article {
-  max-width: 70rem;
   min-width: 390px;
+  padding: 0 120px;
 }
